## [2.0.0] - 2017-03-03
### Added
- Authentication
- Evaluation

## [1.2.0] - 2017-03-02
### Added
- Kodi 17 support

### Fixed
- '..' list item works properly

## [1.1.2] - 2017-01-08
### Fixed
- Description

## [1.1.1] - 2017-01-08
### Added
- Extended description

## [1.1.0] - 2017-01-08
### Added
- Caching
- Stream info
- AMV info
- Subtitles support

### Fixed
- Marking AMV as watched works properly

## [1.0.0] - 2017-01-07
### Added
- Ability to watch featured AMV